--- a/config.ini
+++ b/config.ini
@@ -13,7 +13,7 @@ max-pending-transaction-time = -1
 
 http-server-address = 0.0.0.0:8888
 p2p-listen-endpoint = 0.0.0.0:9876
-p2p-server-address = your-domain:9876
+p2p-server-address = eoscalgary.com:9876
 access-control-allow-origin = *
 
 
